fixed character preview arrow not centered, slight App component refactor,  gh pages deploy

--- a/src/assets/styles/cmps/_character-preview.scss
+++ b/src/assets/styles/cmps/_character-preview.scss
@@ -1,6 +1,5 @@
 .character-preview {
   padding: 10px;
-  gap: 10px;
   width: 100px;
   img {
     width: 5em;
